# Django-Blog

./: db.sqlite3  pyproject.toml
blog/: models.py  views.py
blog/migrations/: 0001_initial.py  0002_rename_create_at_blog_created_at_and_more.py
config/: settings.py  urls.py
member/: views.py
templates/: blog_list.html
templates/registration/: signup.html
