[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = ""
authors = ["Kyubin1123 <michelle010929@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
ipython = "^8.30.0"
django-extensions = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
